# datasette-remote-actors

./: README.md  datasette_remote_actors.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_datasette_remote_actors.py
